spade-tests/src/snapshots/spade_tests__linear_check__unused_anonymous_expression_is_reported.snap
---
source: spade-tests/src/linear_check.rs
---
entity producer() -> (&mut bool, &mut bool) __builtin__
entity consumer(x: &mut bool) -> bool __builtin__

entity x() -> bool {
    inst consumer(inst producer()#0)
}


error: This has a field #1 that is unused
  ┌─ testinput:5:19
  │
5 │     inst consumer(inst producer()#0)
  │                   ^^^^^^^^^^^^^^^ This has a field #1 that is unused
  │
  = note: This has a field #1 that is a &mut value which must be set
